--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div>Home</div>
         <div>Voice Acting</div>
         <div>
-            <a href="Socials.html" target="_self">Socials</a>
+            <a href="/camilaspace.github.io/Socials.html" target="_self">Socials</a>
         </div>
     </nav>
     <header> Header
