--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 
 <body>
-    <link rel="stylesheet" type="text/css" href="/camilaspace.github.io/camilastyle.css">
+    <link rel="stylesheet" type="text/css" href="camilastyle.css">
     <nav>
         <div>Home</div>
         <div>Voice Acting</div>
