--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 
 
 <body>
-    <link rel="stylesheet" type="text/css" href="camilastyle.css">
+    <link rel="stylesheet" type="text/css" href="/camilastyle.css">
     <nav>
         <div>Home</div>
         <div>Voice Acting</div>
         <div>
-            <a href="Socials.html" target="_self">Socials</a>
+            <a href="/Socials.html" target="_self">Socials</a>
         </div>
     </nav>
     <header> Header
